--- a/styleWedding.css
+++ b/styleWedding.css
@@ -137,10 +137,16 @@
   animation-duration: 2s;
   animation-iteration-count: 1;
   font-size: 22px;
-  color: rgb(97, 135, 104);
+  color: #fff;
   text-align: center;
   align-items: center;
-  height: 200px;
+  height: 203px;
   display: flex;
   padding: 20px;
+  line-height: 38px;
+  animation-name: pulse;
+  animation-delay: 0s;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  background-color: rgb(97, 135, 104);
 }
